--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFF</color>
 <!--    Custom colors-->
     <color name="primary">#2D7DF6</color>
-    <color name="background">#E4EBF5</color>
+    <color name="background">#E4E7FB</color>
     <color name="primary_text">#0B0D0C</color>
     <color name="secondary_text">#7D818A</color>
     <color name="dark_shadow">#CDD5EA</color>
