--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,10 +20,14 @@
         app:neumorph_backgroundColor="@color/background"
         android:layout_alignParentEnd="true"
         app:neumorph_shadowColorDark="@color/dark_shadow"
-        app:neumorph_shadowColorLight="@color/white"
+        app:neumorph_shadowColorLight="@color/light_shadow"
         android:layout_marginBottom="-15dp"
-        style="@style/NeumorphismCardNav"
-        app:neumorph_shadowElevation="@dimen/_4sdp"
+        android:layout_marginStart="-7dp"
+        android:layout_marginEnd="-7dp"
+        app:neumorph_strokeWidth="@dimen/_2sdp"
+        app:neumorph_strokeColor="#E1DEDE"
+        app:neumorph_shapeAppearance="@style/NeumorphismCard"
+        app:neumorph_shadowElevation="@dimen/_5sdp"
         android:layout_alignParentStart="true"
         android:layout_height="wrap_content">
         <com.google.android.material.bottomnavigation.BottomNavigationView
