--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,10 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="stokeColor">#E1DEDE</color>
+    <color name="purpleTheme">#6424AC</color>
+    
+<!--    dark theme text colors-->
+    <color name="primary_text_dark">#DAD9D9</color>
+    <color name="dark_background">#3E3E3E</color>
 </resources>
