--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-
+        <item name="fontFamily">@font/gelion_medium</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 <!--        <item name="colorAccent">@color/colorAccent</item>-->
     </style>
@@ -26,16 +26,20 @@
     </style>
     <style name="NeumorphismCard">
         <item name="neumorph_cornerFamily">rounded</item>
-        <item name="neumorph_cornerSize">@dimen/_10sdp</item>
+        <item name="neumorph_cornerSize">@dimen/_7sdp</item>
     </style>
     <style name="NeumorphismCardNav">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSizeTopLeft">@dimen/_10sdp</item>
-        <item name="cornerSizeTopRight">@dimen/_10sdp</item>
+        <item name="cornerSizeTopLeft">@dimen/_15sdp</item>
+        <item name="cornerSizeTopRight">@dimen/_15sdp</item>
     </style>
     <style name="NeumorphismCardTimeTracking">
         <item name="neumorph_cornerFamily">rounded</item>
         <item name="neumorph_cornerSize">@dimen/_60sdp</item>
+    </style>
+    <style name="RoundedButton">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/_7sdp</item>
     </style>
 
 </resources>
