alarm missions all layouts are added!

--- a/app/src/main/res/layout/cup_size_bottom_sheet_model.xml
+++ b/app/src/main/res/layout/cup_size_bottom_sheet_model.xml
@@ -11,7 +11,7 @@
         android:id="@+id/heading_cupSize"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Set default"
+        android:text="@string/set_default"
         android:textSize="@dimen/_11sdp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -162,7 +162,7 @@
         android:layout_height="@dimen/_50sdp"
         android:background="@color/purpleTheme"
         android:gravity="center"
-        android:text="Set size"
+        android:text="@string/set_size"
         android:textColor="@color/white"
         android:textSize="@dimen/_13ssp"
         app:layout_constraintBottom_toBottomOf="parent"
