--- a/app/src/main/res/drawable/rectangle_background.xml
+++ b/app/src/main/res/drawable/rectangle_background.xml
@@ -2,5 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/background"/>
-    <corners android:radius="25dp" />
+    <corners
+        android:topLeftRadius="@dimen/_20sdp"
+        android:topRightRadius="@dimen/_20sdp"/>
+    <padding android:top="@dimen/_10sdp"/>
 </shape>
