--- a/app/src/main/res/layout/activity_alarm_home.xml
+++ b/app/src/main/res/layout/activity_alarm_home.xml
@@ -15,7 +15,7 @@
         android:background="@color/background"
         android:gravity="center"
         android:text="@string/super_alarm"
-        android:textColor="@color/primary_text"
+        android:textColor="@color/heading_primary_text"
         android:textSize="@dimen/_18sdp"
         app:layout_constraintEnd_toStartOf="@+id/previewButtonAlarmHome"
         app:layout_constraintStart_toEndOf="@+id/backButtonAlarmHome"
@@ -243,7 +243,6 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/_10sdp"
                         android:max="100"
-                        android:progress="60"
                         android:progressTint="@color/purpleTheme"
                         android:thumbTint="@color/purpleTheme"
                         app:layout_constraintEnd_toEndOf="parent"
